Closed Bug 1697629 Opened 4 years ago Closed 4 years ago

Fission + sw-wr: UNEXPECTED-FAIL | testing/marionette/harness/marionette_harness/tests/unit/test_reftest.py TestReftest.test_cache_multiple_sizes | AssertionError: 'FAIL' != 'PASS'

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Fission Milestone M7a
Tracking Status
firefox88 --- disabled
firefox89 --- fixed

People

(Reporter: cpeterson, Assigned: mattwoodrow)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

In bug 1697195, we tried to auto-enable SW-WR with Fission is enabled. Unfortunately, some tests failed when run with Fission + SW-WR mode:

Marionette failures:

https://treeherder.mozilla.org/jobs?repo=autoland&searchStr=linux%2C18.04%2Cx64%2Copt%2Ctest-linux1804-64%2Fopt-marionette-headless-fis-e10s%2Cmnh-fis&tochange=a24d9f6247aa4211e227c56db389df0255fc7cc7&fromchange=03e3558727b689d50eefeb19f0d927341d8f2255&selectedTaskRun=M9DmAYu0RHeQ11LnVoLMsw.0).

https://treeherder.mozilla.org/logviewer?job_id=332576581&repo=autoland&lineNumber=57773

TEST-UNEXPECTED-FAIL | testing/marionette/harness/marionette_harness/tests/unit/test_reftest.py TestReftest.test_cache_multiple_sizes | AssertionError: 'FAIL' != 'PASS'

I don't know if this test failure requires Fission + SW-WR or just SW-WR.

This bug may be caused by or fixed by Puppeteer bug 1693011.

No longer blocks: 1697195

Sending this bug to gfx-triage.

Does this Marionette test fail when is SW-WR enabled without Fission? This seems like a SW-WR bug.

Blocks: gfx-triage

I will attempt to reproduce.

Flags: needinfo?(bwerth)

Tracking for Fission M7a Beta. TBD whether SW-WR will block Fission MVP.

Fission Milestone: ? → M7a

Can't reproduce on macOS. I'll keep needinfo open while I rebuild for Linux and try there. We'll keep this in triage.

I can't reproduce this on Linux with the patches from Bug 1697195 applied. I believe this bug is specific to automation.

Flags: needinfo?(bwerth)

Reproduction command should be: ./mach test testing/marionette/harness/marionette_harness/tests/unit/test_reftest.py

Note this is the headless ('MnH') set of test runs. Might be interesting to understand what might be going wrong but I don't think this is a priority.

Severity: -- → S3
Flags: needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)

HeadlessCompositorWidget doesn't let us map a widget DT (since there is no widget), and we instead did a fallback of allocating a 2x2 temporary framebuffer.

Readback on this asserts in a debug build (since we try to readpixels outside the 2x2 bounds), and also fails this test since it was expecting a not-equal result and the difference was also outside the 2x2 bounds (at 600,600).

Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/33bce767b192 Allocate a temporary framebuffer the size of the widget when running in headless mode, so that reftest readback works correctly. r=lsalzman
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
No longer blocks: gfx-triage
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: