Bug 1697629 - Allocate a temporary framebuffer the size of the widget when running in headless mode, so that reftest readback works correctly. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D112298