gfx/webrender_bindings/RenderCompositorSWGL.cpp
@@ -174,8 +174,13 @@ void RenderCompositorSWGL::StartCompositing(
   if (mDirtyRegion.IsEmpty() ||
       !AllocateMappedBuffer(aOpaqueRects, aNumOpaqueRects)) {
     // If allocation of the mapped default framebuffer failed, then just install
-    // a small temporary framebuffer so compositing can still proceed.
-    wr_swgl_init_default_framebuffer(mContext, 0, 0, 2, 2, 0, nullptr);
+    // a temporary framebuffer (with a minimum size of 2x2) so compositing can
+    // still proceed.
+    auto bounds = mDirtyRegion.GetBounds();
+    bounds.width = std::max(bounds.width, 2);
+    bounds.height = std::max(bounds.height, 2);
+    wr_swgl_init_default_framebuffer(mContext, bounds.x, bounds.y, bounds.width,
+                                     bounds.height, 0, nullptr);
   }
 }
 
